--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         # Required for running on GAE
         HTTP_PROXY: ${HTTP_PROXY}
         HTTPS_PROXY: ${HTTPS_PROXY}
+        CORES: ${PREPROCESS_BUILD_CORES}
     image: omopcat_preprocessing:latest
     platform: linux/amd64
     environment:
