fix: Use better low-frequency replacement values (#115)
Use `9.99` as the replacement value for both the public and internal versions, setting the threshold at `10` for both. Also use use better rounding for nicer display of results.

--- a/public.env.sample
+++ b/public.env.sample
@@ -14,7 +14,7 @@ PREPROCESS_SUMMARISE_LEVEL=quarterly  # Level to summarise record counts at (mon
 
 # Low-frequency replacement
 LOW_FREQUENCY_THRESHOLD=10
-LOW_FREQUENCY_REPLACEMENT=5
+LOW_FREQUENCY_REPLACEMENT=9.99
 
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
