Use `BUILD_CORES_MAKE` as envvar name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         # Required for running on GAE
         HTTP_PROXY: ${HTTP_PROXY}
         HTTPS_PROXY: ${HTTPS_PROXY}
-        CORES: ${PREPROCESS_BUILD_CORES}
+        CORES: ${BUILD_CORES_MAKE}
     image: omopcat_preprocessing:latest
     platform: linux/amd64
     environment:
@@ -37,7 +37,7 @@ services:
         # Required for running on GAE
         HTTP_PROXY: ${HTTP_PROXY}
         HTTPS_PROXY: ${HTTPS_PROXY}
-        CORES: ${PREPROCESS_BUILD_CORES}
+        CORES: ${BUILD_CORES_MAKE}
     image: omopcat:latest
     platform: linux/amd64
     restart: unless-stopped
