--- a/public.env.sample
+++ b/public.env.sample
@@ -11,7 +11,8 @@ PREPROCESS_DB_USERNAME=             # username for the source database
 PREPROCESS_DB_PASSWORD=             # password for the source database
 PREPROCESS_DB_CDM_SCHEMA=           # Schema name in the database to connect the OMOP CDM to
 PREPROCESS_SUMMARISE_LEVEL=quarterly  # Level to summarise record counts at (monthly or quarterly)
-PREPROCESS_BUILD_CORES=4            # Number of cores to use for make in docker build
+BUILD_CORES_MAKE=4                  # Number of cores to use for make in docker build
+
 # Low-frequency replacement
 LOW_FREQUENCY_THRESHOLD=10
 LOW_FREQUENCY_REPLACEMENT=9.99
