--- a/public.env.sample
+++ b/public.env.sample
@@ -11,6 +11,7 @@ PREPROCESS_DB_USERNAME=             # username for the source database
 PREPROCESS_DB_PASSWORD=             # password for the source database
 PREPROCESS_DB_CDM_SCHEMA=           # Schema name in the database to connect the OMOP CDM to
 PREPROCESS_SUMMARISE_LEVEL=quarterly  # Level to summarise record counts at (monthly or quarterly)
+BUILD_CORES_MAKE=4                  # Number of cores to use for make in docker build
 
 # Low-frequency replacement
 LOW_FREQUENCY_THRESHOLD=10
