--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,5 +51,21 @@ services:
       LOW_FREQUENCY_REPLACEMENT: ${LOW_FREQUENCY_REPLACEMENT}
     volumes:
       - ${DATA_VOLUME_PATH}:/etc/omopcat/data
+    # Port exposed internally only - nginx will proxy external requests
+    expose:
+      - "3838"
+
+  nginx:
+    build:
+      context: .
+      dockerfile: www/Dockerfile.nginx
+      args:
+        SERVER_NAME: ${SERVER_NAME}
+    platform: linux/amd64
+    restart: unless-stopped
     ports:
-      - ${SHINY_PORT}:3838
+      - ${SHINY_PORT}:80
+      - "443:443"
+    depends_on:
+      - omopcat
+
