Use consistent env naming

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 ENV=test
 DATA_VOLUME_PATH=./data/test_data/internal
 
-SHINY_PORT: 3838
+SHINY_PORT=3000
 
 # For preprocessing
 PREPROCESS_DB_NAME=                 # name of the source database
