--- a/www/Dockerfile.nginx
+++ b/www/Dockerfile.nginx
@@ -1,10 +1,30 @@
-FROM nginx:latest
+FROM nginx:1.29.3@sha256:ac27e318cff1c5340d9a2c2d8db5f0a374dabfe1f285f81348008e01bd980d4d
 
-COPY www/nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
+# Install certbot for SSL certificate creation and renewal
+RUN apt update && \
+    apt install -y python3 \
+    python3-dev \
+    python3-venv \
+    libaugeas-dev \
+    gcc \
+    rustc \
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    cargo \
+    pkg-config
+
+RUN python3 -m venv /opt/certbot/ && \
+    /opt/certbot/bin/pip install --upgrade pip && \
+    /opt/certbot/bin/pip install certbot certbot-nginx && \
+    ln -s /opt/certbot/bin/certbot /usr/bin/certbot
+
 
 # Replace the SERVER_NAME variable in the nginx.conf.template file
+COPY www/nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
+
 ARG SERVER_NAME
 ENV SERVER_NAME=${SERVER_NAME}
-RUN envsubst < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf
-
-CMD ["nginx", "-g", "daemon off;"]
+RUN envsubst '${SERVER_NAME}' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf
+# /usr/bin/certbot --nginx --non-interactive --agree-tos &&
+CMD nginx -g 'daemon off;'
