--- a/www/nginx.conf.template
+++ b/www/nginx.conf.template
@@ -1,3 +1,7 @@
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  ''      close;
+}
 upstream shiny_app {
     server omopcat:3838;
 }
@@ -17,7 +21,7 @@ server {
         proxy_pass http://shiny_app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -28,3 +32,4 @@ server {
         proxy_cache off;
     }
 }
+
