--- a/www/nginx.conf.template
+++ b/www/nginx.conf.template
@@ -20,16 +20,12 @@ server {
     location / {
         proxy_pass http://shiny_app;
         proxy_http_version 1.1;
+        proxy_redirect / $scheme://$http_host/;
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;        
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Disable buffering for Shiny
+        proxy_set_header Connection $connection_upgrade;
+        proxy_read_timeout 20d;
         proxy_buffering off;
-        proxy_cache off;
     }
 }
 
