--- a/www/nginx.conf.template
+++ b/www/nginx.conf.template
@@ -16,15 +16,27 @@ server {
     proxy_read_timeout 600s;
     send_timeout 600s;
 
-    # WebSocket support for Shiny
     location / {
         proxy_pass http://shiny_app;
         proxy_http_version 1.1;
         proxy_redirect / $scheme://$http_host/;
-        proxy_http_version 1.1;
+        
+        # Required headers for Shiny apps
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket support for Shiny
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+        
+        # Timeouts
         proxy_read_timeout 20d;
+        proxy_connect_timeout 7d;
+        proxy_send_timeout 7d;
+        
+        # Buffering
         proxy_buffering off;
     }
 }
