--- a/www/Dockerfile.nginx
+++ b/www/Dockerfile.nginx
@@ -21,9 +21,12 @@ RUN python3 -m venv /opt/certbot/ && \
 
 # Replace the SERVER_NAME variable in the nginx.conf.template file
 COPY www/nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
-COPY --chmod=755 www/docker_entrypoint.sh /usr/local/bin/docker_entrypoint.sh
 ARG SERVER_NAME
 ENV SERVER_NAME=${SERVER_NAME}
 RUN envsubst '${SERVER_NAME}' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf
 
-CMD /usr/local/bin/docker_entrypoint.sh
+# Create certificates for SSL
+COPY --chmod=755 www/create_certificates.sh /usr/local/bin/create_certificates.sh
+RUN /usr/local/bin/create_certificates.sh
+
+CMD nginx -g 'daemon off;'
