--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,9 +66,12 @@ services:
     ports:
       - ${SHINY_PORT}:80
       - "443:443"
+    environment:
+      SERVER_NAME: ${SERVER_NAME}
     depends_on:
       - omopcat
     volumes:
+      - ./www/config:/etc/nginx/conf.d:rw
       - certbot_data:/etc/letsencrypt
 
 volumes:
