--- a/www/Dockerfile.nginx
+++ b/www/Dockerfile.nginx
@@ -20,13 +20,13 @@ RUN python3 -m venv /opt/certbot/ && \
     ln -s /opt/certbot/bin/certbot /usr/bin/certbot
 
 # Replace the SERVER_NAME variable in the nginx.conf.template file
-COPY www/nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
+COPY www/config/nginx.conf.template /etc/nginx/conf.d/nginx.conf.template
 ARG SERVER_NAME
 ENV SERVER_NAME=${SERVER_NAME}
 RUN envsubst '${SERVER_NAME}' < /etc/nginx/conf.d/nginx.conf.template > /etc/nginx/conf.d/default.conf
 
 # Create certificates for SSL
-COPY --chmod=755 www/create_certificates.sh /usr/local/bin/create_certificates.sh
-RUN /usr/local/bin/create_certificates.sh
+COPY --chmod=755 www/create_certificates_and_run_nginx.sh /usr/local/bin/create_certificates_and_run_nginx.sh
+ 
 
-CMD nginx -g 'daemon off;'
+CMD /usr/local/bin/create_certificates_and_run_nginx.sh
