--- a/public.env.sample
+++ b/public.env.sample
@@ -1,7 +1,7 @@
 ENV=test
 DATA_VOLUME_PATH=./data/test_data/public
 
-SHINY_PORT: 3839
+SHINY_PORT=3839
 
 # For preprocessing
 PREPROCESS_DB_NAME=                 # name of the source database
@@ -14,8 +14,11 @@ PREPROCESS_SUMMARISE_LEVEL=quarterly  # Level to summarise record counts at (mon
 BUILD_CORES_MAKE=4                  # Number of cores to use for make in docker build
 
 # Low-frequency replacement
-LOW_FREQUENCY_THRESHOLD=10
-LOW_FREQUENCY_REPLACEMENT=9.99
+LOW_FREQUENCY_THRESHOLD=30
+LOW_FREQUENCY_REPLACEMENT=0.1
 
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
+
+# For nginx
+SERVER_NAME=localhost
