--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       - ${SHINY_PORT}:80
       - "443:443"
     environment:
-      SERVER_NAME: ${SERVER_NAME}
+      SERVER_NAME: ${SERVER_NAME:-localhost}
     depends_on:
       - omopcat
     volumes:
