Serve application by nginx reverse proxy (#135)
* Use nginx for reverse proxy

* Default to 4 cores to build

* Create SSL certificate if not localhost

* Create certificate on startup if it doesn't exist

* Apply suggestions from code review

* Use localhost as default server name

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 ENV=test
 DATA_VOLUME_PATH=./data/test_data/internal
 
-SHINY_PORT: 3838
+SHINY_PORT=3000
 
 # For preprocessing
 PREPROCESS_DB_NAME=                 # name of the source database
@@ -11,7 +11,7 @@ PREPROCESS_DB_USERNAME=             # username for the source database
 PREPROCESS_DB_PASSWORD=             # password for the source database
 PREPROCESS_DB_CDM_SCHEMA=           # Schema name in the database to connect the OMOP CDM to
 PREPROCESS_SUMMARISE_LEVEL=monthly  # Level to summarise record counts at (monthly or quarterly)
-BUILD_CORES_MAKE=1                  # Number of cores to use for make in docker build
+BUILD_CORES_MAKE=4                  # Number of cores to use for make in docker build
 
 # Low-frequency replacement
 LOW_FREQUENCY_THRESHOLD=10
@@ -19,3 +19,6 @@ LOW_FREQUENCY_REPLACEMENT=9.999999
 
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
+
+# For nginx
+SERVER_NAME=localhost
