--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,5 +51,26 @@ services:
       LOW_FREQUENCY_REPLACEMENT: ${LOW_FREQUENCY_REPLACEMENT}
     volumes:
       - ${DATA_VOLUME_PATH}:/etc/omopcat/data
+    # Port exposed internally only - nginx will proxy external requests
+    expose:
+      - "3838"
+
+  nginx:
+    build:
+      context: .
+      dockerfile: www/Dockerfile.nginx
+    platform: linux/amd64
+    restart: unless-stopped
     ports:
-      - ${SHINY_PORT}:3838
+      - ${SHINY_PORT}:80
+      - "443:443"
+    environment:
+      SERVER_NAME: ${SERVER_NAME:-localhost}
+    depends_on:
+      - omopcat
+    volumes:
+      - ./www/config:/etc/nginx/conf.d:rw
+      - certbot_data:/etc/letsencrypt
+
+volumes:
+  certbot_data:
