--- a/public.env.sample
+++ b/public.env.sample
@@ -2,6 +2,7 @@ ENV=test
 DATA_VOLUME_PATH=./data/test_data/public
 
 SHINY_PORT=3839
+CATALOGUE_NAME=UCLH
 
 # For preprocessing
 PREPROCESS_DB_NAME=                 # name of the source database
