--- a/app/DESCRIPTION
+++ b/app/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
     purrr,
     htmltools,
     markdown,
-    bsicons
+    bsicons,
+    stringr
 Suggests:
     devtools,
     usethis,
@@ -48,7 +49,7 @@ Suggests:
 Remotes: SAFEHR-data/omop-bundles
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Config/testthat/edition: 3
 Language: en-US
 Roxygen: list(markdown = TRUE)
