Update UI from initial feedback (#137)
* Use SAFEHR favicon

* Consistent title case

* Improve preview text

* Increase height of concept table container

* Sort data by descending count by default

* Use summarisation level in title

* Remove standard concept column for concepts table

* Fix summarise level in app

* Filter concept table by column and use summarisation level in column name

* Use layperson understandable title

Moved omopcat version to footer in production

* Stop overlapping x axis labels for categorical summary

* Dont display decimals

* Autoformat files

* Apply suggestions from review

* Use setequal to avoid order

* Remove standard concept from snapshot

* Flush session to enable datatable object to be accessed in tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
       OMOPCAT_DATA_PATH: /etc/omopcat/data
       LOW_FREQUENCY_THRESHOLD: ${LOW_FREQUENCY_THRESHOLD}
       LOW_FREQUENCY_REPLACEMENT: ${LOW_FREQUENCY_REPLACEMENT}
+      SUMMARISE_LEVEL: ${PREPROCESS_SUMMARISE_LEVEL}
+      CATALOGUE_NAME: ${CATALOGUE_NAME}
     volumes:
       - ${DATA_VOLUME_PATH}:/etc/omopcat/data
     # Port exposed internally only - nginx will proxy external requests
